@@ -1,7 +1,7 @@
 {
   "name": "pyrawores",
   "version": "2.1.12",
-  "factorio_version": "1.0",
+  "factorio_version": "1.1",
   "title": "Pyanodons Raw Ores",
   "author": "Pyanodon, Nexela, Kingarthur",
   "contact": "",
