@@ -2,6 +2,7 @@
 Version: 2.1.12
 Date: ????
   Changes:
+    - Updated to factorio version 1.1.
 ---------------------------------------------------------------------------------------------------
 Version: 2.1.11
 Date: 2020-11-20
